2013-09-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Partial workaround for linker bug #2198.
	* support/regression/tests/bug-136564.c,
	  support/regression/tests/bug-927659.c,
	  support/regression/tests/bug1057979.c,
	  support/regression/tests/bug3521024.c,
	  support/regression/tests/funptrs.c,
	  support/regression/tests/gcc-torture-execute-20021120-3.c,
	  support/regression/tests/gcc-torture-execute-20030626-1.c,
	  support/regression/tests/gcc-torture-execute-20070201-1.c,
	  support/regression/tests/gcc-torture-execute-921208-1.c,
	  support/regression/tests/gcc-torture-execute-930513-1.c,
	  support/regression/tests/gcc-torture-execute-960327-1.c,
	  support/regression/tests/gcc-torture-execute-980707-1.c,
	  support/regression/tests/snprintf.c,
	  support/regression/tests/gcc-torture-execute-20021118-2.c,
	  support/regression/tests/gcc-torture-execute-20030626-2.c:
	  Enable tests that pass due to workaround for bug #2198.
	* support/regression/tests/gcc-torture-execute-20030916-1.c:
	  Enable passing test.

2013-09-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Implement assertion for linker bug #2198 so it is no longer silent to the user.
	* support/regression/tests/gcc-torture-execute-20030714-1.c:
	  Disable failing test.

2013-09-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Pointer indirect long addressing mode.

2013-09-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Tuned register allocation heuristic.

2013-09-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix loading of upper parts of large values through frame pointer, bug #2209.

2013-08-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Slightly more efficient addition and loading through frame pointer.

2013-08-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug-2205.c: new, added
	* support/regression/tests/*: set svn properties eol and keywords