@@ -131,7 +131,7 @@ static void btree_alloc_subtree(btree_t::vertex_descriptor v, int sPtr, int cssi
       const int size = getSize (sym->type);
 
 #ifdef BTREE_DEBUG
-      std::cout << "Allocating symbol " << sym->name << " (" << v << ") to " << sPtr << "\n";
+      std::cout << "Allocating symbol " << sym->name << " (" << v << ") of size " << size << " to " << sPtr << "\n";
 #endif
 
       if(port->stack.direction > 0)
