@@ -26,12 +26,10 @@ long long foo (void)
 
 void testTortureExecute (void)
 {
-#ifndef __SDCC_stm8 // See bug #2196, 2198.
 #if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
   if (foo () != 1ULL << 63)
     ASSERT (0);
   return;
-#endif
 #endif
 }
 
