@@ -32,11 +32,9 @@ foo (long long j)
 void
 testTortureExecute (void)
 {
-#ifndef __SDCC_stm8 // See bug #2196, 2198.
 // Some ports do not support long long yet.
 #if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16) && !defined(__SDCC_gbz80)
   foo (10);
   return;
-#endif
 #endif
 }
