@@ -22,12 +22,10 @@ f ()
 void
 testTortureExecute (void)
 {
-#ifndef __SDCC_stm8 // See bug #2196, 2198.
 #if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
   if (f () < 0)
     ASSERT (0);
   return;
-#endif
 #endif
 }
 
