@@ -1,5 +1,17 @@
 2013-09-04 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/stm8/gen.c,
+	  support/regression/tests/gcc-torture-execute-20020219-1.c,
+	  support/regression/tests/gcc-torture-execute-20050104-1.c,
+	  support/regression/tests/gcc-torture-execute-920810-1.c,
+	  support/regression/tests/gcc-torture-execute-950612-1.c,
+	  support/regression/tests/gcc-torture-execute-pr42269-2.c,
+	  support/regression/tests/gcc-torture-execute-950915-1.c,
+	  support/regression/tests/gcc-torture-execute-20080529-1.c:
+	  Fix returning of long long.
+
+2013-09-04 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/stm8/gen.c:
 	  Partial workaround for linker bug #2198.
 	* support/regression/tests/bug-136564.c,
